[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/Aquire-BW0ox.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Images/logoSmall.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menu/MyStuff/Manage.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Audiowide-en4g.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1908.0
margin_bottom = 1989.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 1908.0
margin_bottom = 110.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_bottom = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MarginContainer"]
margin_top = 30.0
margin_right = 1878.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 80 )
alignment = 2

[node name="GoBackButton" type="Button" parent="ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
margin_left = 1678.0
margin_right = 1878.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Go Back"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 1908.0
margin_bottom = 185.0
custom_constants/separation = 100
alignment = 1

[node name="YourStuffLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 684.0
margin_right = 1223.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 3 )
text = "Your Stuff"
align = 1

[node name="LogoSmall" type="Sprite" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
position = Vector2( 184, 46 )
scale = Vector2( 0.15025, 0.15025 )
texture = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 1908.0
margin_bottom = 329.0
custom_constants/margin_right = 30
custom_constants/margin_top = 60
custom_constants/margin_left = 103
custom_constants/margin_bottom = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MarginContainer2"]
margin_left = 103.0
margin_top = 60.0
margin_right = 1878.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelsLabel" type="Label" parent="ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
margin_top = 18.0
margin_right = 208.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "Levels"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 333.0
margin_right = 1908.0
margin_bottom = 943.0
rect_min_size = Vector2( 0, 610 )
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="LevelsBackground" type="ColorRect" parent="ScrollContainer/VBoxContainer/MarginContainer3"]
margin_left = 100.0
margin_right = 1808.0
margin_bottom = 610.0

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/VBoxContainer/MarginContainer3/LevelsBackground"]
margin_left = 24.0
margin_top = 19.0
margin_right = 1692.0
margin_bottom = 589.0
color = Color( 0, 0, 0, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollContainer/VBoxContainer/MarginContainer3/LevelsBackground"]
margin_left = 32.0
margin_top = 27.0
margin_right = 1684.0
margin_bottom = 581.0
scroll_horizontal_enabled = false

[node name="Table" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/MarginContainer3/LevelsBackground/ScrollContainer"]

[node name="MarginContainer4" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 947.0
margin_right = 1908.0
margin_bottom = 1087.0
custom_constants/margin_right = 30
custom_constants/margin_top = 60
custom_constants/margin_left = 103
custom_constants/margin_bottom = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MarginContainer4"]
margin_left = 103.0
margin_top = 60.0
margin_right = 1878.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PathsLabel" type="Label" parent="ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer2"]
margin_top = 18.0
margin_right = 176.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "Paths"
align = 1

[node name="MarginContainer5" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 1091.0
margin_right = 1908.0
margin_bottom = 1701.0
rect_min_size = Vector2( 0, 610 )
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Background" type="ColorRect" parent="ScrollContainer/VBoxContainer/MarginContainer5"]
margin_left = 100.0
margin_right = 1808.0
margin_bottom = 610.0

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/VBoxContainer/MarginContainer5/Background"]
margin_left = 24.0
margin_top = 19.0
margin_right = 1692.0
margin_bottom = 589.0
color = Color( 0, 0, 0, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollContainer/VBoxContainer/MarginContainer5/Background"]
margin_left = 32.0
margin_top = 27.0
margin_right = 1684.0
margin_bottom = 581.0
scroll_horizontal_enabled = false

[node name="Table" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/MarginContainer5/Background/ScrollContainer"]

[node name="MarginContainer7" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 1705.0
margin_right = 1908.0
margin_bottom = 1845.0
custom_constants/margin_right = 30
custom_constants/margin_top = 60
custom_constants/margin_left = 103
custom_constants/margin_bottom = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MarginContainer7"]
margin_left = 103.0
margin_top = 60.0
margin_right = 1878.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewPathButton" type="Button" parent="ScrollContainer/VBoxContainer/MarginContainer7/HBoxContainer2"]
margin_left = 762.0
margin_right = 1012.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "New Path"

[node name="MarginContainer6" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 1849.0
margin_right = 1908.0
margin_bottom = 1989.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/MarginContainer6"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1878.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 80 )
alignment = 2

[node name="GoBackButton" type="Button" parent="ScrollContainer/VBoxContainer/MarginContainer6/HBoxContainer2"]
margin_left = 1648.0
margin_right = 1848.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Go Back"
